--- a/LocationModifier2/Dialogs/StockEntry2.xaml
+++ b/LocationModifier2/Dialogs/StockEntry2.xaml
@@ -5,9 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Background="#FF0E0099" Title="StockEntry2" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" SizeToContent="WidthAndHeight">
+         Title="StockEntry2" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="{x:Null}" >
+    <Window.Resources>
+        <ControlTemplate x:Key="OutsideButtonTemplate" TargetType="{x:Type Button}">
+            <Border x:Name="border" BorderBrush="{x:Null}" Background="#A5FFFFFF"  SnapsToDevicePixels="True" Padding="6" Margin="3">
+                <TextBlock x:Name="contentPresenter" Foreground="Black" FontSize="18" Text="{TemplateBinding Content}" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsDefaulted" Value="True">
+                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" TargetName="border" Value="#FFC4E5F6"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="#FF2C628B"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" TargetName="border" Value="#76DDDDDD"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="#FFADB2B5"/>
+                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="#FFaaaaaa"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </Window.Resources>
     <Viewbox>
-        <Grid Width="550" Height="450">
+        <Grid Width="550" Height="450" Background="#FF0E0099">
             <Grid.RowDefinitions>
                 <RowDefinition Height="31*"/>
                 <RowDefinition Height="41*"/>
@@ -44,17 +65,22 @@
                     <Button x:Name="Keypad0" Content="0" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="Keypad_Click"/>
                     <Button x:Name="KeypadEnter" Content="Enter" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="KeypadEnter_Click"/>
                 </UniformGrid>
-                <Button x:Name="CancelButton" Content="Cancel" Margin="0,10,26,0" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" Click="CancelButton_Click" Grid.Row="1"/>
-                <StackPanel x:Name="ButtonPanel" HorizontalAlignment="Left" Height="211" Margin="10,10,0,0" VerticalAlignment="Top" Width="95">
-                    <Button x:Name="SetStock" Content="Set" Height="28" Margin="2" IsEnabled="False" Click="SetStock_Click" FontSize="18"/>
-                    <Button x:Name="MoveSomeStock" Content="Move Some" Height="28" Margin="2" IsEnabled="True" Click="MoveSomeStock_Click" FontSize="16"/>
-                    <Button x:Name="MoveAllStock" Content="Move All" Height="28" Margin="2" IsEnabled="True" Click="MoveAllStock_Click" FontSize="16"/>
+                <Button x:Name="CancelButton" Content="Cancel" Margin="10,10,405,5" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" Click="CancelButton_Click" Grid.Row="1" Grid.ColumnSpan="2"/>
+                <StackPanel x:Name="ButtonPanel" HorizontalAlignment="Left" Height="253" Margin="10,29,0,0" VerticalAlignment="Top" Width="135" Grid.ColumnSpan="2">
+                    <Button x:Name="SetStock" Content="Set" IsEnabled="False" Click="SetStock_Click" FontSize="18" Template="{DynamicResource OutsideButtonTemplate}"/>
+                    <Button x:Name="MoveSomeStock" Content="Move Some" IsEnabled="True" Click="MoveSomeStock_Click" FontSize="16" Template="{DynamicResource OutsideButtonTemplate}"/>
+                    <Button x:Name="MoveAllStock" Content="Move All" IsEnabled="True" Click="MoveAllStock_Click" FontSize="16" Template="{DynamicResource OutsideButtonTemplate}"/>
                 </StackPanel>
 
             </Grid>
-            <Grid HorizontalAlignment="Left" Height="138" Margin="455,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="85">
-                <Button x:Name="AddButton" Content="Add" Margin="0,0,0,98" Click="AddButton_Click" FontSize="24"/>
-                <Button x:Name="Minus" Content="Minus" Margin="0,98,0,0" Click="Minus_Click" FontSize="24"/>
+            <Grid HorizontalAlignment="Left" Height="102" Margin="442,32,0,0" Grid.Row="3" VerticalAlignment="Top" Width="98">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Button x:Name="AddButton" Content="Add" Click="AddButton_Click" Grid.Row="0" Template="{DynamicResource OutsideButtonTemplate}"/>
+                <Button x:Name="Minus" Content="Minus" Click="Minus_Click" Grid.Row="2" Template="{DynamicResource OutsideButtonTemplate}"/>
             </Grid>
 
 
