--- a/LocationModifier2/Dialogs/IssuesList.xaml
+++ b/LocationModifier2/Dialogs/IssuesList.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
         Title="IssuesList" Height="480" Width="800" Background="#E0000000" AllowsTransparency="True" WindowStyle="None"
-        WindowState="Maximized">
+        WindowState="Maximized" ResizeMode="NoResize">
     <Viewbox>
         <Grid Width="800" Height="480">
             <Grid Margin="20,20,0,20">
